# avocado-price-predictor

./: .dockerignore  Dockerfile  README.md  openshift.yml  pytest.ini  requirements.txt  setup.cfg  tox.ini
prediction/: forms.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
prediction/migrations/: 0001_initial.py
prediction/static/css/: index.css
prediction/static/js/: index.js
prediction/templates/prediction/: predict.html
