[metadata]
name = avocado-price-predictor
version = 0.0.2
author = Shay Sirek
author_email = shaysirek@gmail.com
description = Web Application to predict Avocado average price using Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaySirek/avocado-price-predictor
project_urls =
    Bug Tracker = https://github.com/shaySirek/avocado-price-predictor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    Django
    djangorestframework
    avocado-price-predictor-model

[options.packages.find]
where = .